[+Vivi] added google analytics

--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -41,6 +41,5 @@
     <div class="scrollbottom">
         &nbsp;
     </div>
-
-
+    <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/google-analytics.js"></script>
 {%endblock%}
