--- a/ureport/templates/ureport/poll_summary.html
+++ b/ureport/templates/ureport/poll_summary.html
@@ -7,7 +7,7 @@
         {% if not share %}
             <div class="widget">
                 <div class="module widget-head">
-                    <h3>Polls</h3>
+                    <h3>{% trans "Polls" %}</h3>
                 </div>
                 <div class="widget-content">
                     <ul>
@@ -34,7 +34,7 @@
         <div class="column" id="column1">
             <div class="widget">
                 <div class="module widget-head">
-                    <h3>Results </h3>
+                    <h3>{% trans "Results" %}</h3>
                     {% if not share %}<a style="display: inline; padding: 4px; background-color: #26aaff; width: 100px; font-weight: bolder; color: #ffffff" href="{% url polls-summary poll=poll.pk %}" id="share_link">{% trans "Share This Poll" %}</a>{% endif %}
                 </div>
                 <div id="poll_content" class="widget-content">
