--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -19,7 +19,7 @@
     <div id="viz">
     </div>
     <div class="scrolltop">
-	<span>{% blocktrans %} PREVIOUS POLLS.    The last message is received at : {{timelastmsg}} {% endblocktrans %}</span>
+	<span>PREVIOUS POLLS.    {% if timelastmsg %}The last message is received at : {{timelastmsg}}{% else %} Not received any Message yet {% endif %}</span>
     </div>
     <a name="poll_results"></a>
         {% block poll_list %}
