--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -485,7 +485,8 @@
                                         </li>
                                     {% endfor %}
                                 </ul>
-                            {% elif not access %}
+                            {% else %}
+                                {% if not access %}
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
                                     <span id='asspan{{msg.pk}}'>{% trans "Assign" %}</span>
                                     <b class="caret"></b>
@@ -496,6 +497,7 @@
                                         </li>
                                     {% endfor %}
                                 </ul>
+                                 {% endif %}
                             {% endif %}
                         </li>
                     </ul>
