bug in template

--- a/ureport/templates/ureport/aids_dashboard.html
+++ b/ureport/templates/ureport/aids_dashboard.html
@@ -329,7 +329,7 @@
                                 <button class="btn msg_rep" type="button" disabled="disabled"
                                         data-remote=true>Pushed2Mtrac</button>
                             {% else %}
-                                <a href="#" class="btn msg_rep" id="push2mtrac" onclick="push2mtrac('{{ msq.id }}')"
+                                <a href="#" class="btn msg_rep" id="push2mtrac" onclick="push2mtrac('{{ msg.id }}')"
                                    data-remote=true>Push2Mtrac</a>
                             {% endif %}
                         </td>
