--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -476,7 +476,11 @@
                         <li class="dropdown" id="menu2">
                             {% if access and access.can_assign%}
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
+                                {% if msg.dashbaords.exsists %}
+                                    <span>{% trans "Alread Assigned" %}</span>
+                                {% else %}
                                     <span id='asspan{{msg.pk}}'>{% trans "Assign" %}</span>
+                                {% endif %}
                                     <b class="caret"></b>
                                 </a>
                                 <ul class="dropdown-menu">
