--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -10,23 +10,21 @@
 	{% include "ureport/css.html" %}
     {% endblock %}
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery.js"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.min.js?41"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.min.js?41"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
+     <script type="text/javascript">
 
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-23521720-1']);
+          _gaq.push(['_trackPageview']);
 
-         <script type="text/javascript">
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
 
-              var _gaq = _gaq || [];
-              _gaq.push(['_setAccount', 'UA-23521720-1']);
-              _gaq.push(['_trackPageview']);
-
-              (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-              })();
-
-            </script>
+        </script>
 {% block top_js %}
 {% endblock %}
 
@@ -61,7 +59,6 @@
 
             {% block sidecontent %}
 
-
             <div class="intro">
                 <p>
                 {% captureas citizens_trans %}{% trans "Ugandans" %}{% endcaptureas %}
@@ -69,7 +66,8 @@
                 </p>
             </div>
             <div class="join">
-                <a href="/signup"> <img src="{{ MEDIA_URL }}ureport/images/join_us.png"/></a>
+                <a href="/signup">
+                    <img src="{{ MEDIA_URL }}ureport/images/join_us.png"/></a>
             </div>
                 {% if quote %}
                     <div class="quotebox">
